# datascienceforneuro

./: README.md  cores_personalizadas.txt  dashboard.py  decision_tree_app.py  imputar_dados_faltantes.ipynb  main.py  modelo_preditivo.ipynb  ordem_apresentacao.txt  pcas.ipynb  pyproject.toml  simulacao.ipynb  testes.ipynb
arquivos/: alzheimer_por_faixa_etaria.csv  oasis_cross-sectional_imputado.csv  populacao_idosos_2024_2040.csv
